fix text width on 404 page (for better look on mobile) and fix error banner text

--- a/css/articles.css
+++ b/css/articles.css
@@ -347,7 +347,7 @@ html {
   text-align: center;
   line-height: 52px;
   color: white;
-  font-size: 80vw; 
+  font-size: 80%vw; 
   float: center;
   white-space: nowrap;
 }
@@ -376,6 +376,7 @@ html {
 
 .error-container {
   text-align: center;
+  max-width: 90%;
 }
 
 .sadmac {
